CloudFront-EoloPlanner/ejemploingress2/k8s/hello-v2-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: hello-v2-svc
spec:
  selector:
    app: hello-v2
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
